2回目ー国土数値情報を取得し、反映していく

--- a/hasegawa.ipynb
+++ b/hasegawa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhh7sRFICMA8SznTBsZfqm",
+      "authorship_tag": "ABX9TyMDYx5Uwujr/WO/8m1GJsT0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,9 @@
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
-        "import lightgbm as lgb\n"
+        "import lightgbm as lgb\n",
+        "import geopandas as gpd\n",
+        "from shapely.geometry import Point\n"
       ]
     },
     {
@@ -65,6 +67,115 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#国土数値情報を読み込み、乗降客数を取得\n",
+        "\n",
+        "df = pd.read_csv(\"S12-24_NumberOfPassengers_utf8.csv\")\n",
+        "\n",
+        "# 2019年フィルタ\n",
+        "df_2019 = df[\n",
+        "    (df[\"S12_039\"] == 1) &  # データ有\n",
+        "    (df[\"S12_038\"] == 1)    # 重複なし\n",
+        "]\n",
+        "\n",
+        "# 1駅1行に集約\n",
+        "station_2019 = (\n",
+        "    df_2019\n",
+        "    .groupby([\"S12_001c\", \"S12_001\"], as_index=False)\n",
+        "    .agg({\"S12_041\": \"sum\"})\n",
+        "    .rename(columns={\n",
+        "        \"S12_001c\": \"station_code\",\n",
+        "        \"S12_001\": \"station_name\",\n",
+        "        \"S12_041\": \"passengers_2019\"\n",
+        "    })\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "LzGjIPNj350K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 駅データ\n",
+        "stations = pd.read_csv(\"station_2019.csv\")\n",
+        "stations_gdf = gpd.GeoDataFrame(\n",
+        "    stations,\n",
+        "    geometry=gpd.points_from_xy(stations[\"lon\"], stations[\"lat\"]),\n",
+        "    crs=\"EPSG:4326\"\n",
+        ")\n",
+        "\n",
+        "# 物件データ\n",
+        "properties = pd.read_csv(\"train.csv\")\n",
+        "properties_gdf = gpd.GeoDataFrame(\n",
+        "    properties,\n",
+        "    geometry=gpd.points_from_xy(properties[\"lon\"], properties[\"lat\"]),\n",
+        "    crs=\"EPSG:4326\"\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "qn7Q9Acg46lu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#メートル単位に変換\n",
+        "stations_gdf = stations_gdf.to_crs(epsg=3857)\n",
+        "properties_gdf = properties_gdf.to_crs(epsg=3857)\n"
+      ],
+      "metadata": {
+        "id": "g1flVT0e5FmJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#500m以内の駅を結合\n",
+        "\n",
+        "joined = gpd.sjoin(\n",
+        "    properties_gdf,\n",
+        "    stations_gdf,\n",
+        "    how=\"left\",\n",
+        "    predicate=\"dwithin\",\n",
+        "    distance=500\n",
+        ")\n",
+        "\n",
+        "#500m以内の乗降客数を合計\n",
+        "feat_500m = (\n",
+        "    joined\n",
+        "    .groupby(\"id\", as_index=False)\n",
+        "    .agg({\"passengers_2019\": \"sum\"})\n",
+        "    .rename(columns={\"passengers_2019\": \"station_passengers_500m\"})\n",
+        ")\n",
+        "\n",
+        "#元データに戻す\n",
+        "properties = properties.merge(\n",
+        "    feat_500m,\n",
+        "    on=\"id\",\n",
+        "    how=\"left\"\n",
+        ")\n",
+        "\n",
+        "# 駅が無い物件は0に\n",
+        "properties[\"station_passengers_500m\"] = (\n",
+        "    properties[\"station_passengers_500m\"].fillna(0)\n",
+        ")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "1SpOoPpE5Gq9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
