3回目ー修正（国土数値情報）

--- a/hasegawa.ipynb
+++ b/hasegawa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDYx5Uwujr/WO/8m1GJsT0",
+      "authorship_tag": "ABX9TyNbL8Mqwub64biCnaD9++iO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
       "cell_type": "code",
       "source": [
         "# 駅データ\n",
-        "stations = pd.read_csv(\"station_2019.csv\")\n",
+        "stations = station_2019.copy()\n",
         "stations_gdf = gpd.GeoDataFrame(\n",
         "    stations,\n",
         "    geometry=gpd.points_from_xy(stations[\"lon\"], stations[\"lat\"]),\n",
@@ -111,10 +111,9 @@
         ")\n",
         "\n",
         "# 物件データ\n",
-        "properties = pd.read_csv(\"train.csv\")\n",
         "properties_gdf = gpd.GeoDataFrame(\n",
-        "    properties,\n",
-        "    geometry=gpd.points_from_xy(properties[\"lon\"], properties[\"lat\"]),\n",
+        "    train,\n",
+        "    geometry=gpd.points_from_xy(train[\"lon\"], train[\"lat\"]),\n",
         "    crs=\"EPSG:4326\"\n",
         ")\n"
       ],
@@ -154,7 +153,7 @@
         "feat_500m = (\n",
         "    joined\n",
         "    .groupby(\"id\", as_index=False)\n",
-        "    .agg({\"passengers_2019\": \"sum\"})\n",
+        "    .agg({\"passengers_2019\": [\"sum\", \"max\", \"mean\"]})\n",
         "    .rename(columns={\"passengers_2019\": \"station_passengers_500m\"})\n",
         ")\n",
         "\n",
