４回目ー修正（国土数値情報）

--- a/hasegawa.ipynb
+++ b/hasegawa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNbL8Mqwub64biCnaD9++iO",
+      "authorship_tag": "ABX9TyMJ9unn0zC9Bm6dMrlmsm0R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,6 +213,10 @@
       "source": [
         "# 目的変数\n",
         "y = np.log1p(train[\"money_room\"])\n",
+        "train[\"station_passengers_500m_log\"] = np.log1p(train[\"station_passengers_500m\"])\n",
+        "test[\"station_passengers_500m_log\"]  = np.log1p(test[\"station_passengers_500m\"])\n",
+        "\n",
+        "\n",
         "\n",
         "# train / test を結合\n",
         "all_data = pd.concat([\n",
@@ -243,10 +247,15 @@
       "source": [
         "#モデル設定\n",
         "model = lgb.LGBMRegressor(\n",
-        "    n_estimators=500,\n",
-        "    learning_rate=0.05,\n",
+        "    n_estimators=2000,\n",
+        "    learning_rate=0.03,\n",
+        "    max_depth=-1,\n",
+        "    num_leaves=64,\n",
+        "    subsample=0.8,\n",
+        "    colsample_bytree=0.8,\n",
         "    random_state=42\n",
         ")\n",
+        "\n",
         "\n",
         "model.fit(X, y)\n"
       ],
